<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developedBy"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSalami"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salami"/>
            <Button
                android:id="@+id/btnTonno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tonno"/>
            <Button
                android:id="@+id/btnMargherita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/margherita"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paypal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryAddress"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>